[package]
name = "jmap-kismet-test"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = true

[dependencies]
serde_json = "1.0"
colored = "2.1"
clap = { version = "4.5", features = ["derive"] }
jmap = { git = "https://github.com/trumank/jmap", version = "0.1.0" }
paste_buffer = { version = "0.0.0", path = "../paste_buffer" }
